Replace and update backend folder from Backend branch